feat: added accountable registry endpoint
